--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>About Us</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
   </head>
 
@@ -64,7 +64,7 @@
           --><aside class="col-1-3">
             <div class="aboutus-info">
 
-              <img src="img/bsp.jpg" alt="Sumanth Priyesh Bolleddu">
+              <img src="./img/bsp.jpg" alt="Sumanth Priyesh Bolleddu">
 
               <ul>
                 <li><a href="https://www.linkedin.com/in/sumanthpriyesh/">Visit Priyesh&#8217;s LinkedIn</a></li>
@@ -90,7 +90,7 @@
           --><aside class="col-1-3">
             <div class="aboutus-info">
 
-              <img src="img/vivek.jpg" alt="vivek">
+              <img src="./img/vivek.jpg" alt="vivek">
 
               <ul>
                 <li><a href="https://www.linkedin.com/in/vgollapudi/">Visit Vivek&#8217;s LinkedIn</a></li>
@@ -116,7 +116,7 @@
           --><aside class="col-1-3">
             <div class="aboutus-info">
 
-              <img src="img/pavani.jpg" alt="pavani">
+              <img src="./img/pavani.jpg" alt="pavani">
 
               <ul>
                 <li><a href="https://www.linkedin.com/in/sree-pavani-sontam-46074219b/">Visit Pavani&#8217;s LinkedIn</a></li>
@@ -133,7 +133,7 @@
 
             <h2> Data Model</h2>
             
-		<img src="img/dm.jpg">
+		<img src="./img/dm.jpg">
 
             </div>
 
