--- a/importsbyquantity.html
+++ b/importsbyquantity.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Imports By Value</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
   </head>
 
