--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>US Food Imports</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
   </head>
 
@@ -50,7 +50,7 @@
         <section class="teaser col-1-3">
           <h5>Financial take on U.S imports</h5>
           <a href="importsbyvalue.html">
-            <img src="img/importsbyvalue.jpg">
+            <img src="./img/importsbyvalue.jpg">
           </a>
           <p>U.S Imports grew by 6% in 2018 to $129 billion driven in part by strong domestic economic growth.</p>
         </section><!--
@@ -60,7 +60,7 @@
         --><section class="teaser col-1-3">
           <h5>U.S imports by Quantity</h5>
           <a href="importsbyquantity.html">
-            <img src="img/importsbyquantity.jpg">
+            <img src="./img/importsbyquantity.jpg">
           </a>
           <p>As high U.S. incomes drive consumption, the volume of food imports is increasing by 4 percent annually.</p>
         </section><!--
@@ -70,7 +70,7 @@
         --><section class="teaser col-1-3">
           <h5>Learn More...</h5>
           <a href="learnmorewithjs.html">
-            <img src="img/learnmore.jpg">
+            <img src="./img/learnmore.jpg">
           </a>
           <p><br>Read more about the U.S food imports.</p>
         </section>
