--- a/learnmorewithjs.html
+++ b/learnmorewithjs.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
 	
    </head>
@@ -76,7 +76,7 @@
 		
 	</section>
 
- <script src="js/script.js"></script>
+ <script src="./js/script.js"></script>
 
   </body>
 </html>
